settings: Fix alignment of save-discard buttons.
There was some issue in alignment in save discard buttons
with the headings for organization settings due to unequal
top and bottom margins. This commit fixes that by having
same top and bottom margins.

--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -537,7 +537,7 @@ input[type="checkbox"] {
 
 .admin-realm-form {
     & h3 {
-        margin: 10px 0 5px;
+        margin: 5px 0;
     }
 
     .subsection-header h3 {
